--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
 
 #card {
     position: relative;
-    background: radial-gradient(circle at 50% 0%, green 36%, #ffffff 36%);
     width: 100%;
     padding: 30px 20px;
     border: 1px solid black;
@@ -62,6 +61,12 @@ body {
     font-size: 20px;
     letter-spacing: 0.4px;
     font-weight: 600;
+}
+
+.types span {
+    padding: 5px 20px;
+    border-radius: 20px;
+    color: #ffffff;
 }
 
 .stats {
