--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     position: relative;
     width: 100%;
     padding: 30px 20px;
-    box-shadow: 0 20px 30px rgba(0,0,0,0.15);
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
 }
 
